agrego examen al github

--- a/index.html
+++ b/index.html
@@ -3,9 +3,58 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>EXAMEN</title>
+    <link rel="stylesheet" href="estilos.css">
 </head>
 <body>
-    
+    <header>
+        <h1>MI PORTAFOLIO</h1>
+    </header>
+
+        <main>
+            <section>
+                <h1>MI INTRODUCCION</h1>
+                <p>Mi nombre es junior manrique y soy algo persuasivo, interactivo y empatico. suelo ayudar a los demas sin resivir ayuda a cambio. tengo experiencia en programas de visual y excel.
+                </p>
+            </section>
+
+            <section>
+                <h1>MIS HABILIDADES</h1>
+                <ul>
+                    <li>desarrollador web</li>
+                    <li>diseñador web</li>
+                    <li>programador junior</li>
+                    <li>programador senior</li>
+                </ul>
+            </section>
+
+            <section class="section">
+                <h1>proyectos amteriores</h1>
+                <div class="contenedor">
+                <figure>
+                    <img src="proyecto1.png" alt="proyecto 1">
+                    <figcaption></figcaption>
+                </figure>
+                </div>
+
+                <div class="contenedor">
+                <figure>
+                    <img src="proyecto2.png" alt="proyecto 2">
+                    <figcaption></figcaption>
+                </figure>
+                </div>
+
+                <div class="contenedor">
+                <figure>
+                    <img src="proyecto3.png" alt="proyecto 3">
+                    <figcaption></figcaption>
+                </figure>
+                </div>
+            </section>
+        </main>
+
+        <footer>
+            <p>para mas informacion llamar al 992685128 o al correo [juniorjesus3562@gmail.com]</p>
+        </footer>
 </body>
 </html>
